# simple-sdl2-pong

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile.package  README.md  build-release.sh  build.sh  configure-mingw.sh  configure-release.sh  configure.sh  package-mingw-zip.py  package-tar.py  wine-test-mingw-build.sh
src/: Ball.cpp  Ball.hpp  InputManager.cpp  InputManager.hpp  Paddle.cpp  Paddle.hpp  Score.cpp  Score.hpp  SdlSession.cpp  SdlSession.hpp  SdlWindow.cpp  SdlWindow.hpp  main.cpp
